5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1716_2508.log
== TEST (2019-05-15 20:48:52) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%==1):
		pi = pi+(4/(n-1)*(n-2)*(n-3))
	else:
		pi = pi-(4/(n-1)*(n-2)*(n-3))
	n = n-2
print(round(pi, 8))
-- ERROR:
File "XXXX", line 5
    if (n%==1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:48:56) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%==1):
		pi = pi+(4/(n-1)*(n-2)*(n-3))
	else:
		pi = pi-(4/(n-1)*(n-2)*(n-3))
	n = n-2
print(round(pi, 8))
-- ERROR:
File "XXXX", line 5
    if (n%==1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:49:05) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%==1):
		pi = pi+(4/(n-1)*(n-2)*(n-3))
	else:
		pi = pi-(4/(n-1)*(n-2)*(n-3))
	n = n-2
print(round(pi, 8))
-- ERROR:
File "XXXX", line 5
    if (n%==1):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 20:49:45) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%2==1):
		pi = pi+(4/(n-1)*(n-2)*(n-3))
	else:
		pi = pi-(4/(n-1)*(n-2)*(n-3))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi = pi+(4/(n-1)*(n-2)*(n-3))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:08:23) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
s = -1

while (n>=1):
	if (n%2==1):
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	else:
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	s = s*-1
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:08:42) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
s = -1

while (n>=1):
	if (n%2==1):
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	else:
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	s = s*-1
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:12:12) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
s = -1

while (n>=1):
	if (n%2==1):
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	else:
		pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
	s = s*-1
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+(s*(4/((n-1)*(n-2)*(n-3))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:54:40) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n-2)*(n-3)))
	else:
		pi = pi+(4/((n)*(n-1)*(n-2)))
	n = n-2
	pi = pi-(4/((n)*(n-1)*(n-2)))
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi = pi+(4/((n-1)*(n-2)*(n-3)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:55:16) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n-2)*(n-3)))
	else:
		pi = pi+(4/((n)*(n-1)*(n-2)))
	n = n-2
	pi = pi-(4/((n)*(n-1)*(n-2)))
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi = pi+(4/((n-1)*(n-2)*(n-3)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:10:17) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
	if (n>=1):
		pi = pi-(4/((n)*(n+1)*(n+2)))
	else:
print(round(pi, 8))
-- ERROR:
File "XXXX", line 13
    print(round(pi, 8))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:10:40) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
	if (n>=1):
		pi = pi-(4/((n)*(n+1)*(n+2)))
	else:
print(round(pi, 8))
-- ERROR:
File "XXXX", line 13
    print(round(pi, 8))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:11:38) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
	if (n>=1):
		pi = pi-(4/((n)*(n+1)*(n+2)))
	else:
print(round(pi, 8))
-- ERROR:
File "XXXX", line 13
    print(round(pi, 8))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:13:27) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
	if (n>=1):
		pi = pi-(4/((n)*(n+1)*(n+2)))
	else:
print(round(pi, 8))
-- ERROR:
File "XXXX", line 13
    print(round(pi, 8))
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:35:40) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 0

while (n>=1):
	if (n%2==1):
		pi = pi+(4/((n-1)*(n)*(n+1
-- ERROR:
File "XXXX", line 7
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:54:42) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:56:48) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:56:49) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:56:49) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:56:53) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:56:59) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:57:17) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:57:38) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:58:14) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- EXECUTION TIME:
0.209962
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:58:27) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- EXECUTION TIME:
0.139132
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:59:28) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- EXECUTION TIME:
0.190423
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:05:07) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3

while (n>=1):
	pi = pi
	if (n%2==1):
		pi = -(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+(4/((n)*(n+1)*(n+2)))
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = -(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:44:38) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:52:29) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 23:52:34) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 00:04:24) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- EXECUTION TIME:
0.138317
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2508/main.py", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:08:21) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:09:13) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:09:14) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:09:30) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 00:14:00) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+t*(4/((n-1)*(n)*(n+1)))
	else:
		pi = pi+t*(4/((n)*(n+1)*(n+2)))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+t*(4/((n-1)*(n)*(n+1)))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:57:18) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi(+t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi(+t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi(+t*(4/((n-1)*(n)*(n+1))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:00:52) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi(+t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi(+t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi(+t*(4/((n-1)*(n)*(n+1))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:03:32) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi(+t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi(+t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi(+t*(4/((n-1)*(n)*(n+1))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:04:29) 
-- CODE:
n = float(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi(+t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi(+t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi(+t*(4/((n-1)*(n)*(n+1))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:04:40) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi(+t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi(+t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi(+t*(4/((n-1)*(n)*(n+1))))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:05:02) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+(t*(4/((n-1)*(n)*(n+1))))
	else:
		pi = pi+(t*(4/((n)*(n+1)*(n+2))))
	t = t*(-1)
	n = n-2
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    pi = pi+(t*(4/((n-1)*(n)*(n+1))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:08:14) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d = 2
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+(t*(4/((d+1)*(d)*(d+2))))
	else:
		pi = pi+(t*(4/((d)*(d+1)*(d+2))))
	t = t*(-1)
	d = d-2
	n = n-1
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pi = pi+(t*(4/((d)*(d+1)*(d+2))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:10:20) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d = 2
while (n>=1):
	pi = pi
	if (n%2==1):
		pi = pi+(t*(4/((d-1)*(d)*(d+1))))
	else:
		pi = pi+(t*(4/((d)*(d+1)*(d+2))))
	t = t*(-1)
	d = d-2
	n = n-1
print(round(pi, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    pi = pi+(t*(4/((d)*(d+1)*(d+2))))
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:27:42) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0

while (n>=t):
	pi = pi+((-1)**i)*(4/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:28:16) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0

while (n>=t):
	pi = pi+((-1)**i)*(4/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:32:58) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0

while (n>=t):
	pi = pi+((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.97604618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:33:03) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0

while (n>=t):
	pi = pi+((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.97604618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:36:27) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0

while (n>=t):
	pi = pi+((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.97604618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:36:47) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0

while (n>=t):
	pi = pi+((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.97604618
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:45:15) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 1
d2 = 1
d3 = 1
i = 0
e = 0

while (n>=t):
	pi = pi+((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 1
	d2 += 2
	d3 += 3
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.86398046
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:48:10) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 1
d2 = 1
d3 = 1
i = 0
e = 0
x = 0
while (n>=t):
	pi = pi+x
	x = ((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 1
	d2 += 2
	d3 += 3
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.85714286
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:49:56) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 1
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0
x = 0
while (n>=t):
	pi = pi+x
	x = ((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	n = n-1
	
print(round(pi, 8))
-- OUTPUT:
2.97301587
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:53:22) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 0
d1 = 2
d2 = 3
d3 = 4
i = 0
e = 0
x = 0
while (t<n):
	pi = pi+x
	x = ((-1)**i)*(e/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	e = 4
	t = t+1
	
print(round(pi, 8))
-- OUTPUT:
2.97301587
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:55:03) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 0
d1 = 2
d2 = 3
d3 = 4
i = 0
x = 0
while (t<n):
	pi = pi+x
	x = ((-1)**i)*(4/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	t = t+1
	
print(round(pi, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 12:55:15) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 0
d1 = 2
d2 = 3
d3 = 4
i = 0
x = 0
while (t<n):
	pi = pi+x
	x = ((-1)**i)*(4/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	t = t+1
	
print(round(pi, 8))
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 12:55:24) 
-- CODE:
n = int(input('Digite um numero: '))
pi = 3
t = 0
d1 = 2
d2 = 3
d3 = 4
i = 0
x = 0
while (t<n):
	pi = pi+x
	x = ((-1)**i)*(4/(d1*d2*d3))
	i = i+1
	d1 += 2
	d2 += 2
	d3 += 2
	t = t+1
	
print(round(pi, 8))
-- EXECUTION TIME:
0.16979
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
